--- a/index.html
+++ b/index.html
@@ -538,11 +538,11 @@ function showTempoResponseScreen(correctAnswer, callback, videoFile, trialNumber
       <div style="display: flex; gap: 40px; margin-top: 20px;">
         <button class="tempo-btn" data-choice="fast" style="margin-top:30px;font-size:1em;">
           Fast<br>
-          <img src="fast_icon.png" alt="Fast" style="width:60px;display:block;margin:8px auto 0 auto;"/>
+          <img src="fast_icon.jpg" alt="Fast" style="width:60px;display:block;margin:8px auto 0 auto;"/>
         </button>
         <button class="tempo-btn" data-choice="slow" style="margin-top:30px;font-size:1em;">
           Slow<br>
-          <img src="slow_icon.png" alt="Slow" style="width:60px;display:block;margin:8px auto 0 auto;"/>
+          <img src="slow_icon.jpg" alt="Slow" style="width:60px;display:block;margin:8px auto 0 auto;"/>
         </button>
         <button class="tempo-btn" data-choice="same" style="margin-top:30px;font-size:1em;">
           Same<br>
@@ -1395,6 +1395,7 @@ setupVisualElements();
 </script>
 </body>
 </html>
+
 
 
 
