--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@ function showTempoResponseScreen(correctAnswer, callback, videoFile, trialNumber
         </button>
         <button class="tempo-btn" data-choice="same" style="margin-top:30px;font-size:1em;">
           Same<br>
-          <img src="same_icon.png" alt="Same" style="width:60px;display:block;margin:8px auto 0 auto;"/>
+          <img src="same_icon.jpg" alt="Same" style="width:60px;display:block;margin:8px auto 0 auto;"/>
         </button>
       </div>
       <audio id="correctSound" src="correct_feedback.mp3"></audio>
@@ -771,15 +771,15 @@ function playPitchPracticeVideo(videoFile, correctAnswer, callback, trialNumber)
       <div style="display: flex; gap: 40px; margin-top: 20px;">
         <button class="tempo-btn" data-choice="high" style="padding: 14px 28px; font-size: 1.2em; border-radius: 10px;">
           High<br>
-          <img src="high_icon.png" alt="High" style="width:60px;display:block;margin:8px auto 0 auto;"/>
+          <img src="high_icon.jpg" alt="High" style="width:60px;display:block;margin:8px auto 0 auto;"/>
         </button>
         <button class="tempo-btn" data-choice="low" style="padding: 14px 28px; font-size: 1.2em; border-radius: 10px;">
           Low<br>
-          <img src="low_icon.png" alt="Low" style="width:60px;display:block;margin:8px auto 0 auto;"/>
+          <img src="low_icon.jpg" alt="Low" style="width:60px;display:block;margin:8px auto 0 auto;"/>
         </button>
         <button class="tempo-btn" data-choice="same" style="padding: 14px 28px; font-size: 1.2em; border-radius: 10px;">
           Same<br>
-          <img src="same_icon.png" alt="Same" style="width:60px;display:block;margin:8px auto 0 auto;"/>
+          <img src="same_icon.jpg" alt="Same" style="width:60px;display:block;margin:8px auto 0 auto;"/>
         </button>
       </div>
       <audio id="correctSound" src="correct_feedback.mp3"></audio>
@@ -1395,6 +1395,7 @@ setupVisualElements();
 </script>
 </body>
 </html>
+
 
 
 
